# TradingBot_0DTE

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
dashboard/: app.py  runs.py
dashboard/pages/: 1_Backtest.py  2_Grid_Search.py  3_Vergleich.py  4_ML_Strategie.py
docs/: Projektplanung.md
scripts/: build_ml_dataset.py  check_data.py  download_data.py  run_backtest.py  run_gridsearch.py  run_ml_backtest.py  train_ml.py
src/tradingbot_0dte/: __init__.py  config.py  data_quality.py  download.py  storage.py  thetadata_client.py
src/tradingbot_0dte/backtest/: __init__.py  engine.py  fills.py  gridsearch.py  metrics.py  params.py  strategy.py  trade.py
src/tradingbot_0dte/ml/: __init__.py  dataset.py  evaluate.py  features.py  labels.py  model.py  policy.py  walkforward.py
tests/: test_backtest_offline.py  test_dashboard_runs_offline.py  test_gridsearch_offline.py  test_ml_dataset_offline.py  test_ml_features_offline.py  test_ml_model_offline.py  test_ml_policy_offline.py  test_pipeline_offline.py
